add new functionalities; modify existing modules; update styling

--- a/Modules/LandingPage/Resources/assets/css/style.css
+++ b/Modules/LandingPage/Resources/assets/css/style.css
@@ -8994,6 +8994,9 @@ textarea.is-invalid.dataTable-input {
 .text-end {
     text-align: right !important;
 }
+.text-end1 {
+    text-align: left !important;
+}
 
 .text-center {
     text-align: center !important;
